<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity"
    android:background="@drawable/background_gradient"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_rounded"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/background_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="300dip"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.395" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@mipmap/background_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/btn_voltar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/btn_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />

            <Button
                android:id="@+id/btn_chat"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/btn_chat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_save"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_feliz"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/rosto_feliz"
            app:layout_constraintBottom_toBottomOf="@+id/graph"
            app:layout_constraintEnd_toStartOf="@+id/graph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/graph"
            app:srcCompat="@mipmap/img_feliz"
            app:layout_constraintVertical_bias="0.83"/>

        <ImageView
            android:id="@+id/img_triste"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/rosto_triste"
            app:layout_constraintBottom_toBottomOf="@+id/graph"
            app:layout_constraintEnd_toStartOf="@+id/graph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/graph"
            app:layout_constraintVertical_bias="0.08"
            app:srcCompat="@mipmap/img_triste" />

        <ImageView
            android:id="@+id/img_raiva"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/rosto_bravo"
            app:layout_constraintBottom_toBottomOf="@+id/graph"
            app:layout_constraintEnd_toStartOf="@+id/graph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/graph"
            app:layout_constraintVertical_bias="0.33"
            app:srcCompat="@mipmap/img_raiva" />

        <ImageView
            android:id="@+id/img_confuso"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/rosto_confuso"
            app:layout_constraintBottom_toBottomOf="@+id/graph"
            app:layout_constraintEnd_toStartOf="@+id/graph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/graph"
            app:layout_constraintVertical_bias="0.58"
            app:srcCompat="@mipmap/img_confuso" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/background_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/roboto"
        android:textColor="@android:color/white"
        android:text="@string/historico_emocional"
        android:textSize="30sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>